[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/WindowImageSize.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="WindowImageSize" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterC" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelC" type="PanelContainer" parent="CenterC"]
margin_left = 517.0
margin_top = 185.0
margin_right = 763.0
margin_bottom = 535.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginC" type="MarginContainer" parent="CenterC/PanelC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 239.0
margin_bottom = 343.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxC" type="VBoxContainer" parent="CenterC/PanelC/MarginC"]
margin_left = 16.0
margin_top = 16.0
margin_right = 216.0
margin_bottom = 320.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridC" type="GridContainer" parent="CenterC/PanelC/MarginC/VBoxC"]
margin_right = 200.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 48 )
custom_constants/vseparation = 16
custom_constants/hseparation = 8
columns = 2

[node name="WidthLabel" type="Label" parent="CenterC/PanelC/MarginC/VBoxC/GridC"]
margin_right = 64.0
margin_bottom = 48.0
rect_min_size = Vector2( 64, 48 )
text = "Width:"
valign = 1

[node name="WidthLineEdit" type="LineEdit" parent="CenterC/PanelC/MarginC/VBoxC/GridC"]
margin_left = 72.0
margin_right = 200.0
margin_bottom = 48.0
rect_min_size = Vector2( 128, 48 )
size_flags_horizontal = 10

[node name="HeightLabel" type="Label" parent="CenterC/PanelC/MarginC/VBoxC/GridC"]
margin_top = 64.0
margin_right = 64.0
margin_bottom = 112.0
rect_min_size = Vector2( 64, 48 )
text = "Height:"
valign = 1

[node name="HeightLineEdit" type="LineEdit" parent="CenterC/PanelC/MarginC/VBoxC/GridC"]
margin_left = 72.0
margin_top = 64.0
margin_right = 200.0
margin_bottom = 112.0
rect_min_size = Vector2( 128, 48 )
size_flags_horizontal = 10

[node name="LockRatioCheck" type="CheckBox" parent="CenterC/PanelC/MarginC/VBoxC"]
margin_top = 128.0
margin_right = 200.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 48 )
text = "Lock Ratio"

[node name="InterpolationOption" type="OptionButton" parent="CenterC/PanelC/MarginC/VBoxC"]
margin_top = 192.0
margin_right = 200.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 48 )
text = "NEAREST"
align = 1
items = [ "NEAREST", null, false, 0, null, "BILINEAR", null, false, 1, null, "CUBIC", null, false, 2, null, "TRILINEAR", null, false, 3, null, "LANCZOS", null, false, 4, null ]
selected = 0

[node name="HBoxC" type="HBoxContainer" parent="CenterC/PanelC/MarginC/VBoxC"]
margin_top = 256.0
margin_right = 200.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 10
custom_constants/separation = 16

[node name="OK" type="Button" parent="CenterC/PanelC/MarginC/VBoxC/HBoxC"]
margin_right = 92.0
margin_bottom = 48.0
size_flags_horizontal = 3
text = "OK"

[node name="Cancel" type="Button" parent="CenterC/PanelC/MarginC/VBoxC/HBoxC"]
margin_left = 108.0
margin_right = 200.0
margin_bottom = 48.0
size_flags_horizontal = 3
text = "Cancel"

[connection signal="pressed" from="." to="." method="_on_WindowImageSize_pressed"]
[connection signal="text_changed" from="CenterC/PanelC/MarginC/VBoxC/GridC/WidthLineEdit" to="." method="_on_WidthLineEdit_text_changed"]
[connection signal="text_changed" from="CenterC/PanelC/MarginC/VBoxC/GridC/HeightLineEdit" to="." method="_on_HeightLineEdit_text_changed"]
[connection signal="toggled" from="CenterC/PanelC/MarginC/VBoxC/LockRatioCheck" to="." method="_on_LockRatioCheck_toggled"]
[connection signal="item_selected" from="CenterC/PanelC/MarginC/VBoxC/InterpolationOption" to="." method="_on_InterpolationOption_item_selected"]
[connection signal="pressed" from="CenterC/PanelC/MarginC/VBoxC/HBoxC/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="CenterC/PanelC/MarginC/VBoxC/HBoxC/Cancel" to="." method="_on_Cancel_pressed"]
